turtleart.housemany.HouseMany.scala.code
override def run() {
  for (house <- 1 to 4)
    house()
  	droite(90)
  	avance(50)
  	gauche(90)
  gauche(90)
  avance(200)
  droite(90)
  avance(75)
  house()
  avance(150)
  house()
  gauche(90)
  avance(150)
  droite(90)
  avance(75)
  for (house <- 1 to 4)
    house()
  	droite(90)
  	avance(50)
  	gauche(90)
  gauche(90)
  avance(200)
  gauche(90)
  avance(150)
  droite(180)
}
  
def house(){
  baisseCrayon()
  avance(30)
  droite(30)
  for (i <- 1 to 3) {
  	avance(30)
    droite(120)
  }
  droite(60)
  for (i <- 1 to 3){
  avance(30)
  droite(90)   
  }
  leveCrayon()
}